@@ -365,8 +365,10 @@ cdef extern from "ode/ode.h":
     dBodyID dGeomGetBody (dGeomID)
     void dGeomSetPosition (dGeomID, dReal x, dReal y, dReal z)
     void dGeomSetRotation (dGeomID, dMatrix3 R)
+    void dGeomSetQuaternion (dGeomID, dQuaternion)
     dReal * dGeomGetPosition (dGeomID)
     dReal * dGeomGetRotation (dGeomID)
+    void dGeomGetQuaternion (dGeomID, dQuaternion result)
     void dGeomDestroy (dGeomID)
     void dGeomGetAABB (dGeomID, dReal aabb[6])
     dReal *dGeomGetSpaceAABB (dGeomID)
